--- a/mesteranas/templates/post.html
+++ b/mesteranas/templates/post.html
@@ -7,6 +7,7 @@
 <p>{%trans "publish on:"%}" {{post.date}}</p>
 <p>{%trans "category:"%}" {{post.category}}</p>
 <p><pre>{{post.body|safe}}</pre></p>
+<p><a href="{%url "comments" post.pk%}">{%trans "comments"%}</a></p>
 <details>
     <summary>share</summary>
     <a href="https://t.me/share/url?url={{post.title}} :https://domain.com{% url "ViewPost" post.pk%}">telegram</a>
