--- a/mesteranas/templates/about.html
+++ b/mesteranas/templates/about.html
@@ -4,8 +4,15 @@
 {%trans "about"%}
 {%endblock%}
 {%block content%}
-<h1>{%trans "about"%}</h1>
-<p>{%trans "description:"%}</p>
-<p>{%trans "no"%}</p>
-<p>{%trans "version :"%}" 0.1</p>
+<h1>{% trans "About Me" %}</h1>
+<p>{% trans "Hello! I'm a passionate developer with a strong foundation in Python, HTML, CSS, and JavaScript." %}</p>
+<p>{% trans "My expertise lies in creating dynamic user interfaces with frameworks like Django, PyQt6, and wxPython, and developing functional Telegram bots." %}</p>
+<p>{% trans "Additionally, I have experience in developing addons for the NVDA screen reader, which aids visually impaired users like myself in navigating digital content more effectively." %}</p>
+<p>{% trans "I have a solid grasp of various Python modules that enhance the functionality and efficiency of my projects, enabling me to build robust and scalable applications." %}</p>
+<p>{% trans "I am bilingual, proficient in both Arabic and English." %}</p>
+<p>{% trans "My journey in programming started at the young age of 11, and it has been a rewarding adventure ever since." %}</p>
+<p>{% trans "I have a particular affinity for open-source projects, as I believe in the power of collaborative development and sharing knowledge to enhance and innovate." %}</p>
+<p>{% trans "Outside of programming, I am an avid sports fan. I support Al Ahli in Egypt, Real Madrid in Spain, and Manchester City in England." %}</p>
+<p>{% trans "My passion for sports is just as intense as my love for coding!" %}</p>
+<p>{% trans "I am always eager to take on new challenges and continuously learn to contribute more effectively to the communities I am part of." %}</p>
 {%endblock%}
